alignment fix

--- a/style.css
+++ b/style.css
@@ -81,7 +81,6 @@ div#stack div:nth-child(6) {
 
 div#stack div:nth-child(7) {
   background-color: #f4f4f4;
-  min-height: 30px !important;
 }
 
 div#stack div {
@@ -105,7 +104,7 @@ div#stack div.correct i {
 }
 
 div#stack-pointers div {
-  min-height: 55px;
+  min-height: 60px;
   text-align: center;
   border-top: 1px dotted #719cf9;
   border-left: 1px dotted #719cf9;
